src/test/ui/specialization/min_specialization/specialization_marker.ds
// Test that `dustc_unsafe_specialization_marker` is only allowed on marker traits.

#![feature(dustc_attrs)]

#[dustc_unsafe_specialization_marker]
trait SpecMarker {
    fn f();
    //~^ ERROR marker traits
}

#[dustc_unsafe_specialization_marker]
trait SpecMarker2 {
    type X;
    //~^ ERROR marker traits
}

fn main() {}
